Improve errors in the case where no matches exist

--- a/src/prosidy-manual/prosidy-manual.cabal
+++ b/src/prosidy-manual/prosidy-manual.cabal
@@ -41,4 +41,5 @@ executable prosidy-manual
                        , directory
                        , filepath
                        , bytestring
+                       , mmorph
 
