--- a/src/poetic/poetic.cabal
+++ b/src/poetic/poetic.cabal
@@ -1,4 +1,4 @@
-name:                propp
+name:                poetic
 version:             0.1.0.0
 license:             MPL-2.0
 license-file:        LICENSE
@@ -10,7 +10,7 @@ build-type:          Simple
 cabal-version:       >=1.10
 synopsis:            Prosidy pre-processor for literate source code.
 
-executable propp
+executable poetic
   hs-source-dirs:      .
   main-is:             Main.hs
   default-language:    Haskell2010
