--- a/src/prosidy-manual/prosidy-manual.cabal
+++ b/src/prosidy-manual/prosidy-manual.cabal
@@ -15,14 +15,14 @@ build-type:            Simple
 executable prosidy-manual
   hs-source-dirs:        .
   default-language:      Haskell2010
-  ghc-options:           -pgmL propp
+  ghc-options:           -pgmL poetic
 
   main-is:               Main.hs
 
   other-modules:         Prosidy.Manual
                        , Prosidy.Manual.Monad
 
-  build-tool-depends:    propp:propp
+  build-tool-depends:    poetic:poetic
 
   build-depends:         base >= 4.7 && < 5
                        , prosidy
