--- a/src/prosidy/prosidy.cabal
+++ b/src/prosidy/prosidy.cabal
@@ -19,6 +19,7 @@ library
   ghc-options:         -Wall
   build-depends:       base                 >=4.12 && <4.14
                      , aeson                >=1.4  && <1.5
+                     , bytestring           >=0.9  && <0.11
                      , containers           >=0.6  && <0.7
                      , contravariant        >=1.5  && <1.6
                      , hashable             >=1.2  && <1.4
