Use a Makefile instead of a bunch of random scripts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,9 @@
     "files.exclude": {
         "_cache/**": true,
         "_site/**": true,
+        "bin/**": true,
         "dist/**": true,
+        ".done/**": true,
         "dist-newstyle": true,
         ".envrc": true,
         ".ghc.environment.*": true,
