--- a/src/prosidy-manual/prosidy-manual.cabal
+++ b/src/prosidy-manual/prosidy-manual.cabal
@@ -44,4 +44,5 @@ executable prosidy-manual
                        , bytestring
                        , mmorph
                        , binary
+                       , bytestring
 
