Semi-massive commit refactoring prosidyc
- Adds a source location to all Prosidy nodes, enabling better reporting
- Cleans up prosidyc's definitions to be more monomorphic
- Changes prosidy-manual's backend from hakyll to shake
- Adds correct line numbers to poetic haskell output
- Starts fixing the manual to have an actual specification

--- a/cabal.project
+++ b/cabal.project
@@ -2,7 +2,7 @@ packages: src/*/*.cabal
 jobs:     $ncpus
 
 package *
-  split-sections: True
+-- split-sections: True
   optimization: True
   executable-stripping: True
 
