--- a/src/prosidy/prosidy.cabal
+++ b/src/prosidy/prosidy.cabal
@@ -5,7 +5,7 @@ maintainer:            alex@fldcr.com
 copyright:             Copyright 2020 to James Alexander Feldman-Crough
 category:              Language
 
-version:               1.0.0.0
+version:               1.1.0.0
 
 cabal-version:         >=1.10
 license:               MPL-2.0
@@ -22,6 +22,8 @@ library
                      , bytestring           >=0.9  && <0.11
                      , containers           >=0.6  && <0.7
                      , contravariant        >=1.5  && <1.6
+                     , deepseq              >=1.4  && <1.5
+                     , binary               >=0.8  && <0.9
                      , hashable             >=1.2  && <1.4
                      , megaparsec           >=8.0  && <8.1
                      , prettyprinter        >=1.2  && <1.6
