--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,11 +2,22 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Compile Manual",
+            "label": "Build everything",
             "type": "shell",
-            "command": "./bin/prosidy-manual watch",
+            "command": "./bin/m",
+            "args": ["all"],
             "group": {
                 "kind": "build",
+                "isDefault": true
+            }
+        },
+        {
+            "label": "Run tests",
+            "type": "shell",
+            "command": "./bin/m",
+            "args": ["test"],
+            "group": {
+                "kind": "test",
                 "isDefault": true
             }
         }
