Clean up the build process for CI

--- a/.envrc
+++ b/.envrc
@@ -1,3 +1,4 @@
 PATH_add bin
 PATH_add _out/bin
-NIX_PATH="nixpkgs=$PWD/nix/nixpkgs.nix"
+PATH_add .ghc/bin
+export NIX_PATH="nixpkgs=$PWD/nix/nixpkgs.nix"
