--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,7 @@
             "label": "Build everything",
             "type": "shell",
             "command": "./bin/m",
-            "args": ["all"],
+            "args": ["build", "all"],
             "group": {
                 "kind": "build",
                 "isDefault": true
@@ -15,7 +15,7 @@
             "label": "Run tests",
             "type": "shell",
             "command": "./bin/m",
-            "args": ["test"],
+            "args": ["test", "all"],
             "group": {
                 "kind": "test",
                 "isDefault": true
