--- a/prosidy.cabal
+++ b/prosidy.cabal
@@ -1,6 +1,6 @@
 cabal-version: 3.0
 name:          prosidy
-version:       1.2.0.0
+version:       1.3.0.0
 synopsis:      A simple language for writing documents.
 license:       MPL-2.0
 license-file:  LICENSE
@@ -9,14 +9,16 @@ maintainer:    alex@fldcr.com
 copyright:     ©2020 to James Alexander Feldman-Crough
 category:      Language
 tested-with:   GHC == 8.8.1
+data-dir:      data
+data-files:    golden/**/*.pro, golden/**/*.json
 
 description:   
-  Prosidy is a small language for writing documents.
-  More details are on its site at https://prosidy.org.
+    Prosidy is a small language for writing documents.
+    More details are on its site at https://prosidy.org.
 
 source-repository head
-  type:     git
-  location: https://git.fldcr.com/prosidy
+   type:     git
+   location: https://git.fldcr.com/prosidy
 
 flag fatal-warnings
   description: Turns all warnings into errors. Used in CI.
@@ -28,12 +30,24 @@ common prosidy-shared
   default-language: Haskell2010
   build-depends:    base >=4.12 && <5
   ghc-options:
-    -Wall 
-    -Wno-name-shadowing
+      -Wall 
+      -Wno-name-shadowing
 
   if flag(fatal-warnings)
-    ghc-options:
-      -Werror
+      ghc-options:
+          -Werror
+
+
+common prosidy-shared-test
+  default-language: Haskell2010
+  ghc-options:
+      -Wall 
+      -Wno-name-shadowing
+  build-depends:
+      base         >=4.12 && <5
+    , tasty        >=1.2  && <1.3
+    , tasty-hunit  >=0.10 && <0.11
+    , tasty-golden >=2.3  && <2.4
 
 -------------------------------------------------------------------------------
 library
@@ -58,7 +72,7 @@ library
     , template-haskell  >= 2.14 && < 2.16
     , text             ^>= 1.2
     , transformers     ^>= 0.5
-
+  
 
 -------------------------------------------------------------------------------
 library prosidyc
@@ -103,6 +117,7 @@ executable prosidy-manual
   other-modules:
       Prosidy.Manual.Compile
     , Prosidy.Manual.Monad
+    , Prosidy.Manual.Opts
     , Prosidy.Manual.Slug
     , Prosidy.Manual.TableOfContents
 
@@ -118,6 +133,7 @@ executable prosidy-manual
     , hashable              >= 1.2  && < 1.4
     , lens                 ^>= 4.18
     , optparse-applicative ^>= 0.15
+    , shake                ^>= 0.18
     , text                 ^>= 1.2
     , transformers         ^>= 0.5
     , unordered-containers ^>= 0.2
@@ -142,6 +158,33 @@ executable prosidy-markup
     , text                 ^>= 1.2
     , transformers         ^>= 0.5
 
+  
+-------------------------------------------------------------------------------
+test-suite prosidy-test
+  import:          prosidy-shared-test
+  type:            exitcode-stdio-1.0
+  hs-source-dirs:  test
+  ghc-options:     -main-is Prosidy.Test.main
+
+  main-is:
+      Prosidy/Test.hs
+
+  other-modules:
+      Prosidy.Test.Prosidy
+    , Paths_prosidy
+
+  autogen-modules:
+      Paths_prosidy
+
+  build-depends:
+      prosidy
+    , aeson            ^>= 1.4
+    , aeson-pretty     ^>= 0.8
+    , aeson-diff       ^>= 1.1
+    , bytestring       ^>= 0.10
+    , directory        ^>= 1.3
+    , filepath         ^>= 1.4
+    , text             ^>= 1.2
 
 -------------------------------------------------------------------------------
 library prosidy-internal
