--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,7 @@
 .stack-work/
-.done/
+/.env
 dist/
 dist-newstyle/
 /cabal.project.local
-/bin/cabal/
-/_site/
-/_cache/
 /_out/
-/.shake/
 *~
-/.ghc
